<resources>
    <string name="app_name">Smart</string>
    <string name="smart_1_0">Smart 1.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera_action">"Use Camera"</string>
    <string name="video_action">"Use Video "</string>
    <string name="select_option"><b>Smart 0.1</b> allow you to count the number of person(s) in video or camera frame.\nPlease start by selecting one option.You can choose between camera or video feed.</string>
    <string name="select_option_header">SMART CAMERA</string>
    <string name="camera_loop">Camera Loop</string>
    <string name="take_photo">Capture</string>
    <string name="statistics">"Statistics "</string>
    <string name="total_person">Total detected persons</string>
    <string name="total_person_in_frame">Total person in frame .....</string>
    <string name="frame">Person in frame</string>
    <string name="category">Category .....</string>
    <string name="app_smart_name">Smart</string>
</resources>
