<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".DetectionActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_semi_transparent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentTop="true"
            android:background="@color/color_semi_transparent"
            android:elevation="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/TextAppearance.MaterialComponents.Body2"
            app:titleTextColor="@android:color/white" />

        <com.iot.smart.OverlayView
            android:id="@+id/tracking_overlay"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:elevation="2dp"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/stats_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <ImageView
            android:id="@+id/cameraPreview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/stats_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:visibility="gone" />

        <androidx.camera.view.PreviewView
            android:id="@+id/viewFinder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/stats_container"
            android:visibility="visible" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stats_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:backgroundTint="@color/colorPrimary"
            android:padding="@dimen/vertical_margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/inference_stats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:text="@string/statistics"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/inference_separator"
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="10dp"
                android:background="@android:color/darker_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inference_stats" />

            <LinearLayout
                android:id="@+id/category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inference_separator"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/category"
                    android:textColor="@android:color/holo_red_dark" />

                <TextView
                    android:id="@+id/category_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="right"
                    android:text="N/A"
                    android:textColor="@android:color/holo_red_dark" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/stats_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_layout">

                <TextView
                    android:id="@+id/time_running"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="Running time ....."
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/time_running_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="right"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/frame_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/stats_layout">

                <TextView
                    android:id="@+id/frame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/frame"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/frame_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="right"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/crop_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_layout">

                <TextView
                    android:id="@+id/total_persons"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/total_person"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/total_persons_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="right"
                    android:text="0"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/inference_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crop_layout">

                <TextView
                    android:id="@+id/inference"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="Inference Time ....."
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/inference_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="right"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/camera_capture_button"
            android:layout_width="@dimen/camera_button"
            android:layout_height="@dimen/camera_button"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:background="@drawable/custom_camera_button"
            android:drawablePadding="5dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:textColor="@android:color/darker_gray"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


